k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8123
