k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/target: "fritzbox.aomame.de"
spec:
  tls:
    - secretName: home-assistant-tls
      hosts:
        - hass.aomame.de
  rules:
    - host: hass.aomame.de
      http:
        paths:
          - backend:
              serviceName: home-assistant
              servicePort: 80
